NewsApp with alternative layout for tablets

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <fragment
-        android:id="@+id/fragment"
+        android:id="@+id/fragment_news_list"
         android:name="com.example.rita.newsappwithfragments.NewsListFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
